# Free-Particle-wave-function

./: .gitignore  CMakeLists.txt  README.md  consts.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
